Intermediate minimap2 integration
